@@ -1,4 +1,6 @@
 Changes towards version 0.2:
+- TFB_FlushGraphics keeps track of smallest bounding box that requires
+  updating, allowing for faster scaling
 - Added a TFB_Canvas data buffer to let TFB_Image be more accessible
 - Added new graphics primitives
 - Added 'smooth' scolling for ff, frev (similar to the 3DO) - PhracturedBlue
